<!--
  ~ Copyright (c) 2017-2021 Fei Kuan.
  ~
  ~ This file is part of Streak Alarm
  ~ (see <https://github.com/fei0316/snapstreak-alarm>).
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->

    <PreferenceCategory android:title="@string/about_app"
        app:iconSpaceReserved="false">

    </PreferenceCategory>
    <Preference
        android:defaultValue="Default value"
        android:key="edit_text_preference_1"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/app_description"
        android:title="@string/app_name" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_2"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="..."
        android:title="@string/text_version" />
    <PreferenceCategory android:title="@string/about_developer"
        app:iconSpaceReserved="false">
    </PreferenceCategory>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_5"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/developed_by"
        android:title="@string/title_developed" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_4"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/iatfei_link"
        android:title="@string/about_mysite">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://iatfei.com" />
    </Preference>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_8"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/about_email"
        android:title="@string/about_contact">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="mailto:apps@iatfei.com" />

    </Preference>
<!--
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_10"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/about_special_thanks_content"
        android:title="@string/about_special_thanks_title" >
    </Preference>
-->
<!--    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_11"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:title="@string/about_privacy_policy" >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://apps-gh.iatfei.com/privacy_app.html" />
    </Preference>-->
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_3"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/about_this_license_details"
        android:title="@string/about_this_license" >
        <intent android:action="android.intent.action.VIEW"
            android:data="https://github.com/fei0316/snapstreak-alarm" />
    </Preference>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_6"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:title="@string/about_license" >
    </Preference>
    <PreferenceCategory android:title="@string/about_restart_title"
        app:iconSpaceReserved="false">
    </PreferenceCategory>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_7"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/restart"
        android:title="@string/about_restart" />
    <PreferenceCategory android:title="@string/legal"
        app:iconSpaceReserved="false">

    </PreferenceCategory>
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:defaultValue="Default value"
        android:key="edit_text_preference_9"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        app:iconSpaceReserved="false"
        android:summary="@string/trademark"
        android:title="@string/about_trademark" />
</PreferenceScreen>
