<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017-2021 Fei Kuan.
  ~
  ~ This file is part of Streak Alarm
  ~ (see <https://github.com/fei0316/snapstreak-alarm>).
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_stopalarm"
        android:title="@string/menu_cancel"
        android:textSize="18sp"/>
    <item
        android:id="@+id/menu_setinterval"
        android:title="@string/menu_remindinterval"
        android:textSize="18sp" />
    <item
        android:id="@+id/menu_snooze"
        android:title="@string/menu_snooze"
        android:textSize="18sp" />
    <item
        android:id="@+id/menu_notifsched"
        android:title="@string/menu_notifsched"
        android:textSize="18sp" />
    <item
        android:id="@+id/menu_addsc"
        android:title="@string/menu_add_shortcut"
        android:textSize="18sp" />
    <item
        android:id="@+id/menu_changelog"
        android:title="@string/changelog_title"
        android:textSize="18sp" />
    <item
        android:id="@+id/about"
        android:title="@string/title_activity_about"
        android:textSize="18sp" />
</menu>